@@ -30,3 +30,5 @@ xml-i18n-*
 intltool-*
 libbonoboui-*.tar.gz
 libbonoboui2-*.tar.gz
+autom4te.cache
+stamp-h1
