@@ -23,7 +23,7 @@
   @NOTATION@
 */
 
-#include <config.h>
+#include "config.h"
 #include <string.h>
 #include <gtk/gtk.h>
 #include <gdk/gdkkeysyms.h>
