@@ -10,6 +10,7 @@
  *                 Martin Baulig.
  */
 
+#include "config.h"
 #include <gdk/gdkx.h>
 #include <gdk/gdkkeysyms.h>
 #include <libgnome/gnome-macros.h>
