@@ -1,4 +1,5 @@
 #include <glib-object.h>
 
+#include "config.h"
 #include "bonobo-ui-marshal.h"
 #include "bonobo-ui-marshal.c"
